算法复习 多思路解决实际问题 不局限于单独的算法